Fix TypeScript SDK duplicate step definitions, Go/Java handler improvements
- Remove literal 'an "AVAILABLE" message exists in the queue', 'no "AVAILABLE" message exists in the queue', and 'the message is "DELETED"' step defs from apigateway_sqs.ts that conflicted with generic {string} versions in cross_service_common.ts and sns_sqs.ts/sqs.ts
- Stage remaining TypeScript SDK step and world changes from previous session
- Stage Go core APIGateway/SQS handler improvements and SDK test fixes
- Stage Java core DocDB/ElastiCache/Neptune/RDS handler improvements

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>