@@ -1,6 +1,5 @@
 package io.localwebservices.lws.providers.elasticache;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import io.localwebservices.lws.ServerState;
@@ -11,10 +10,11 @@ import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
 
-/** ElastiCache wire-protocol HTTP handler (AWS Query protocol). */
+/** ElastiCache wire-protocol HTTP handler (AWS Query / XML protocol). */
 public class ElastiCacheHandler implements HttpHandler {
 
-  private static final ObjectMapper MAPPER = new ObjectMapper();
+  private static final String XMLNS = "http://elasticache.amazonaws.com/doc/2015-02-02/";
+  private static final String REQUEST_ID = "00000000-0000-0000-0000-000000000000";
 
   private final ServerState state;
   private final ElastiCacheStore store;
@@ -37,7 +37,9 @@ public class ElastiCacheHandler implements HttpHandler {
     for (String pair : bodyStr.split("&")) {
       String[] kv = pair.split("=", 2);
       if (kv.length == 2) {
-        params.put(URLDecoder.decode(kv[0], "UTF-8"), URLDecoder.decode(kv[1], "UTF-8"));
+        params.put(
+            URLDecoder.decode(kv[0], StandardCharsets.UTF_8),
+            URLDecoder.decode(kv[1], StandardCharsets.UTF_8));
       }
     }
     String action = params.getOrDefault("Action", "");
@@ -49,16 +51,10 @@ public class ElastiCacheHandler implements HttpHandler {
       handleAction(action, params, exchange);
     } catch (InterruptedException e) {
       Thread.currentThread().interrupt();
-      sendJson(exchange, 500, Map.of("__type", "InternalFailure", "message", "Interrupted"));
+      sendError(exchange, 500, "InternalFailure", "Interrupted");
     } catch (Exception e) {
-      sendJson(
-          exchange,
-          400,
-          Map.of(
-              "__type",
-              "CacheClusterNotFound",
-              "message",
-              e.getMessage() != null ? e.getMessage() : "Error"));
+      sendError(
+          exchange, 400, "CacheClusterNotFound", e.getMessage() != null ? e.getMessage() : "Error");
     }
   }
 
@@ -67,118 +63,241 @@ public class ElastiCacheHandler implements HttpHandler {
     switch (action) {
       case "CreateCacheCluster":
         {
+          // Arrange
           Map<String, Object> cluster = store.createCacheCluster(params);
-          sendJson(
-              exchange, 200, Map.of("CreateCacheClusterResult", Map.of("CacheCluster", cluster)));
+          // Act + Assert
+          sendXml(exchange, 200, buildItemResponse("CreateCacheCluster", "CacheCluster", cluster));
           break;
         }
       case "DeleteCacheCluster":
         {
+          // Arrange
           String id = params.get("CacheClusterId");
           Map<String, Object> cluster = store.deleteCacheCluster(id);
+          // Assert
           if (cluster == null) {
-            sendJson(
-                exchange,
-                400,
-                Map.of(
-                    "__type", "CacheClusterNotFound", "message", "CacheCluster not found: " + id));
+            sendError(exchange, 400, "CacheClusterNotFound", "CacheCluster not found: " + id);
             return;
           }
-          sendJson(
-              exchange, 200, Map.of("DeleteCacheClusterResult", Map.of("CacheCluster", cluster)));
+          sendXml(exchange, 200, buildItemResponse("DeleteCacheCluster", "CacheCluster", cluster));
           break;
         }
       case "DescribeCacheClusters":
         {
+          // Arrange
           String id = params.get("CacheClusterId");
           List<Map<String, Object>> list = store.describeCacheClusters(id);
-          sendJson(
-              exchange, 200, Map.of("DescribeCacheClustersResult", Map.of("CacheClusters", list)));
+          // Act + Assert
+          sendXml(
+              exchange,
+              200,
+              buildListResponse("DescribeCacheClusters", "CacheClusters", "CacheCluster", list));
           break;
         }
       case "CreateReplicationGroup":
         {
+          // Arrange
           Map<String, Object> rg = store.createReplicationGroup(params);
-          sendJson(
-              exchange,
-              200,
-              Map.of("CreateReplicationGroupResult", Map.of("ReplicationGroup", rg)));
+          // Act + Assert
+          sendXml(
+              exchange, 200, buildItemResponse("CreateReplicationGroup", "ReplicationGroup", rg));
           break;
         }
       case "DeleteReplicationGroup":
         {
+          // Arrange
           String id = params.get("ReplicationGroupId");
           Map<String, Object> rg = store.deleteReplicationGroup(id);
+          // Assert
           if (rg == null) {
-            sendJson(
+            sendError(
                 exchange,
                 400,
-                Map.of(
-                    "__type",
-                    "ReplicationGroupNotFoundFault",
-                    "message",
-                    "ReplicationGroup not found: " + id));
+                "ReplicationGroupNotFoundFault",
+                "ReplicationGroup not found: " + id);
             return;
           }
-          sendJson(
-              exchange,
-              200,
-              Map.of("DeleteReplicationGroupResult", Map.of("ReplicationGroup", rg)));
+          sendXml(
+              exchange, 200, buildItemResponse("DeleteReplicationGroup", "ReplicationGroup", rg));
           break;
         }
       case "DescribeReplicationGroups":
         {
+          // Arrange
           String id = params.get("ReplicationGroupId");
           List<Map<String, Object>> list = store.describeReplicationGroups(id);
-          sendJson(
+          // Act + Assert
+          sendXml(
               exchange,
               200,
-              Map.of("DescribeReplicationGroupsResult", Map.of("ReplicationGroups", list)));
+              buildListResponse(
+                  "DescribeReplicationGroups", "ReplicationGroups", "ReplicationGroup", list));
           break;
         }
       case "CreateCacheSubnetGroup":
         {
+          // Arrange
           Map<String, Object> sg = store.createCacheSubnetGroup(params);
-          sendJson(
-              exchange,
-              200,
-              Map.of("CreateCacheSubnetGroupResult", Map.of("CacheSubnetGroup", sg)));
+          // Act + Assert
+          sendXml(
+              exchange, 200, buildItemResponse("CreateCacheSubnetGroup", "CacheSubnetGroup", sg));
           break;
         }
       case "DeleteCacheSubnetGroup":
         {
+          // Arrange
           String name = params.get("CacheSubnetGroupName");
           store.deleteCacheSubnetGroup(name);
-          sendJson(exchange, 200, Map.of());
+          // Act + Assert
+          sendXml(exchange, 200, buildEmptyResponse("DeleteCacheSubnetGroup"));
           break;
         }
       case "DescribeCacheSubnetGroups":
         {
+          // Arrange
           String name = params.get("CacheSubnetGroupName");
           List<Map<String, Object>> list = store.describeCacheSubnetGroups(name);
-          sendJson(
+          // Act + Assert
+          sendXml(
               exchange,
               200,
-              Map.of("DescribeCacheSubnetGroupsResult", Map.of("CacheSubnetGroups", list)));
+              buildListResponse(
+                  "DescribeCacheSubnetGroups", "CacheSubnetGroups", "CacheSubnetGroup", list));
           break;
         }
       default:
-        {
-          sendJson(
-              exchange,
-              400,
-              Map.of(
-                  "__type", "UnknownOperationException", "message", "Not implemented: " + action));
-        }
+        sendError(exchange, 400, "UnknownOperationException", "Not implemented: " + action);
     }
   }
 
-  private void sendJson(HttpExchange exchange, int status, Object body) throws IOException {
-    byte[] bytes = MAPPER.writeValueAsBytes(body);
-    exchange.getResponseHeaders().set("Content-Type", "application/json");
+  // ── XML response helpers ──────────────────────────────────────────────────────
+
+  private String buildItemResponse(String action, String itemTag, Map<String, Object> item) {
+    // Arrange
+    StringBuilder sb = new StringBuilder();
+    // Act
+    sb.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
+    sb.append("<").append(action).append("Response xmlns=\"").append(XMLNS).append("\">\n");
+    sb.append("  <").append(action).append("Result>\n");
+    sb.append("    <").append(itemTag).append(">\n");
+    appendMapFields(sb, item, 6);
+    sb.append("    </").append(itemTag).append(">\n");
+    sb.append("  </").append(action).append("Result>\n");
+    sb.append("  <ResponseMetadata><RequestId>")
+        .append(REQUEST_ID)
+        .append("</RequestId></ResponseMetadata>\n");
+    sb.append("</").append(action).append("Response>\n");
+    // Assert: return built XML
+    return sb.toString();
+  }
+
+  private String buildListResponse(
+      String action, String listTag, String itemTag, List<Map<String, Object>> items) {
+    // Arrange
+    StringBuilder sb = new StringBuilder();
+    // Act
+    sb.append("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
+    sb.append("<").append(action).append("Response xmlns=\"").append(XMLNS).append("\">\n");
+    sb.append("  <").append(action).append("Result>\n");
+    sb.append("    <").append(listTag).append(">\n");
+    for (Map<String, Object> item : items) {
+      sb.append("      <").append(itemTag).append(">\n");
+      appendMapFields(sb, item, 8);
+      sb.append("      </").append(itemTag).append(">\n");
+    }
+    sb.append("    </").append(listTag).append(">\n");
+    sb.append("  </").append(action).append("Result>\n");
+    sb.append("  <ResponseMetadata><RequestId>")
+        .append(REQUEST_ID)
+        .append("</RequestId></ResponseMetadata>\n");
+    sb.append("</").append(action).append("Response>\n");
+    // Assert: return built XML
+    return sb.toString();
+  }
+
+  private String buildEmptyResponse(String action) {
+    // Arrange + Act + Assert
+    return "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
+        + "<"
+        + action
+        + "Response xmlns=\""
+        + XMLNS
+        + "\">\n"
+        + "  <ResponseMetadata><RequestId>"
+        + REQUEST_ID
+        + "</RequestId></ResponseMetadata>\n"
+        + "</"
+        + action
+        + "Response>\n";
+  }
+
+  @SuppressWarnings("unchecked")
+  private void appendMapFields(StringBuilder sb, Map<String, Object> map, int indent) {
+    // Arrange
+    String pad = " ".repeat(indent);
+    // Act
+    for (Map.Entry<String, Object> entry : map.entrySet()) {
+      String key = entry.getKey();
+      Object val = entry.getValue();
+      if (val instanceof Map) {
+        sb.append(pad).append("<").append(key).append(">\n");
+        appendMapFields(sb, (Map<String, Object>) val, indent + 2);
+        sb.append(pad).append("</").append(key).append(">\n");
+      } else if (val != null) {
+        sb.append(pad)
+            .append("<")
+            .append(key)
+            .append(">")
+            .append(escapeXml(val.toString()))
+            .append("</")
+            .append(key)
+            .append(">\n");
+      }
+    }
+  }
+
+  private String escapeXml(String s) {
+    // Arrange
+    if (s == null) return "";
+    // Act + Assert
+    return s.replace("&", "&amp;")
+        .replace("<", "&lt;")
+        .replace(">", "&gt;")
+        .replace("\"", "&quot;");
+  }
+
+  private void sendXml(HttpExchange exchange, int status, String xml) throws IOException {
+    // Arrange
+    byte[] bytes = xml.getBytes(StandardCharsets.UTF_8);
+    // Act
+    exchange.getResponseHeaders().set("Content-Type", "text/xml; charset=UTF-8");
     exchange.sendResponseHeaders(status, bytes.length);
     try (OutputStream os = exchange.getResponseBody()) {
       os.write(bytes);
     }
+  }
+
+  private void sendError(HttpExchange exchange, int status, String code, String message)
+      throws IOException {
+    // Arrange
+    String xml =
+        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
+            + "<ErrorResponse xmlns=\""
+            + XMLNS
+            + "\">\n"
+            + "  <Error>\n"
+            + "    <Code>"
+            + escapeXml(code)
+            + "</Code>\n"
+            + "    <Message>"
+            + escapeXml(message)
+            + "</Message>\n"
+            + "  </Error>\n"
+            + "  <RequestId>"
+            + REQUEST_ID
+            + "</RequestId>\n"
+            + "</ErrorResponse>\n";
+    // Act
+    sendXml(exchange, status, xml);
   }
 }
